# wsn

./: .gitignore  CMakeLists.txt  README.md  build.py  requirements.txt
backend/src/: CMakeLists.txt  main.cpp
backend_module/: CMakeLists.txt
backend_module/include/: GenerateLDGraph.hpp  LDGraph.hpp  Sensor.hpp  Simulation.hpp  WSNManager.hpp  minimal_cover.hpp  utils.hpp
backend_module/include/api/: SimulationManager.hpp
backend_module/include/core/: Entity.hpp  GenerateLDGraph.hpp  LDGraph.hpp  Sensor.hpp  Simulation.hpp  Target.hpp  cover_structures.hpp  minimal_cover.hpp  utility.hpp  utils.hpp
backend_module/include/shared/: data_structures.hpp  simulation_structures.hpp  utility.hpp
backend_module/src/: CMakeLists.txt  GenerateLDGraph.cpp  Sensor.cpp  Simulation.cpp  WSNManager.cpp  bind.cpp  config.json  state.json  test.cpp  utils.cpp
backend_module/src/api/: SimulationManager.cpp  bind.cpp
backend_module/src/core/: GenerateLDGraph.cpp  Sensor.cpp  Simulation.cpp
core_engine/: CMakeLists.txt
core_engine/include/: Sensor.hpp  SensorSystemManager.hpp
core_engine/src/: CMakeLists.txt  Sensor.cpp  SensorSystemManager.cpp  bind.cpp  main.cpp
example_configs/: config1.json  config2.json  config3.json  config4.json  test_config1.json  test_config2.json
frontend/: frontend.py
lib/backend_package/: backend.pyd  backend.pyi
user_interface/: Interface.py  Interface2.py  cpp_tests.py  generate_positions.py  main.py  user_interface.py
